@@ -1,0 +1,8 @@
+set(SUBDIRS src test)
+
+autoheader("config.h" null)
+
+foreach(subdir ${SUBDIRS})
+  add_subdirectory(${subdir})
+endforeach()
+
